# optedu

./: .gitignore  README.md  __init__.py  optimize.py  pyproject.toml
optedu/algorithms/: __init__.py  bfgs.py  genetic.py  gradient_descent.py  hooke_jeeves.py  linesearch.py  lp_simplex.py  lp_two_phase.py  nelder_mead.py  newton.py  pso.py  sa.py  solve_lp.py
optedu/algorithms/lp/: __init__.py  simplex_standard.py  two_phase.py
optedu/problems/: beale.py  himmelblau.py  lp.py  lp_standardize.py  quadratic.py  rosenbrock.py
optedu/utils/: plotting.py  tracing.py  types.py
optedu/visuals/: __init__.py  core.py  interactive.py
tests/: conftest.py  test_dfo.py  test_lp_core.py  test_metaheuristics_smoke.py  test_rosenbrock.py  test_unconstrained.py
